--- a/assets/css/print.css
+++ b/assets/css/print.css
@@ -164,7 +164,7 @@ th a:hover {
 
 /* board table */
 #board-container {
-    padding-bottom: 200px; /* Space to avoid dropdown menu truncated */
+    padding-bottom: 220px; /* Space to avoid dropdown menu truncated */
     overflow-x: scroll;
 }
 
